5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1592_1800.log
== TEST (2019-03-29 17:34:50) 
-- CODE:
a = float(input"lado A")
b = float(input("lado B")
c = floati(nput("lado C")
f = (a**2+b**2+c**2)/(a+b+c)
print(round(f,7))
-- ERROR:
File "XXXX", line 1
    a = float(input"lado A")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:35:41) 
-- CODE:
a = float(input("lado A")
b = float(input("lado B")
c = floati(nput("lado C")
f = (a**2+b**2+c**2)/(a+b+c)
print(round(f,7))
-- ERROR:
File "XXXX", line 2
    b = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:36:29) 
-- CODE:
a = float(input("lado A")
b = float(input("lado B")
c = float(input("lado C")
f = (a**2+b**2+c**2)/(a+b+c)
print(round(f,7))
-- ERROR:
File "XXXX", line 2
    b = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:37:19) 
-- CODE:
fron math import*
a = float(input("lado A")
b = float(input("lado B")
c = float(input("lado C")
f = (a**2+b**2+c**2)/(a+b+c)
print(round(f,7))
-- ERROR:
File "XXXX", line 1
    fron math import*
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:37:37) 
-- CODE:
from math import*
a = float(input("lado A")
b = float(input("lado B")
c = float(input("lado C")
f = (a**2+b**2+c**2)/(a+b+c)
print(round(f,7))
-- ERROR:
File "XXXX", line 3
    b = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:38:06) 
-- CODE:
from math import*
a = float(input("lado A")
b = float(input("lado B")
c = float(input("lado C")
f = (a**2+b**2+c**2)/(a+b+c)
print(round(f,7))
-- ERROR:
File "XXXX", line 3
    b = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:38:36) 
-- CODE:
from math import*
a = float(input("lado a")
b = float(input("lado b")
c = float(input("lado c")
f = (a**2+b**2+c**2)/(a+b+c)
print(round(f,7))
-- ERROR:
File "XXXX", line 3
    b = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:39:17) 
-- CODE:
from math import*
a=float(input("lado a")
b=float(input("lado b")
c=float(input("lado c")
f=(a**2+b**2+c**2)/(a+b+c)
print(round(f,7))
-- ERROR:
File "XXXX", line 3
    b=float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:39:52) 
-- CODE:
from math import*
a=float(input("lado a"))
b=float(input("lado b"))
c=float(input("lado c"))
f=(a**2+b**2+c**2)/(a+b+c)
print(round(f,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:40:42) 
-- CODE:
from math import*
a=float(input("lado a"))
b=float(input("lado b"))
c=float(input("lado c"))
f=(a**2+b**2+c**2)/(a+b+c)
print(round(f,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:40:53) 
-- CODE:
from math import*
a=float(input("lado a"))
b=float(input("lado b"))
c=float(input("lado c"))
f=(a**2+b**2+c**2)/(a+b+c)
print(round(f,7))
-- EXECUTION TIME:
0.139431
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
